--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <div class="card-group">
         <div class="card dialog-card">
           <div class="about-card-img">
-            <img src="https://media.licdn.com/dms/image/D4D35AQGYFpiPb6EPug/profile-framedphoto-shrink_400_400/0/1663332861991?e=1674219600&v=beta&t=sjBzXxayRLIQgv2R9MK5Djw6lH2Ju1sarcX-YyqLTxc" alt="sumit" />
+            <img src="Picsart_22-09-15_14-59-04-058.jpg" alt="sumit" />
           </div>
           <div class="about-card-title">Sumit</div>
           <div class="about-card-content">Deoli</div>
